# ember

./: .gitignore  AGENTS.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
emb/: __init__.py  _browser.py  _http.py  _url_validator.py  agent.py  api.py  cli.py  crawl.py  interact.py  map.py  mcp.py  scrape.py  search.py  types.py
ember/: __init__.py  _browser.py  agent.py  api.py  cli.py  crawl.py  interact.py  map.py  mcp.py  scrape.py  search.py  types.py
tests/: benchmark_scrape.py  test_api.py  test_cli.py  test_core.py  test_mcp.py  test_unit.py
